[package]
name = "rust-chess-server"
version = "0.1.0"
authors = ["Coolmic <hello@hardmode.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"